# game-ledger

./: .gitignore  readme.md
backend/: Dockerfile  app.py  pyproject.toml  readme.md
backend/cluster/: k8s.yaml  template.secret.yaml
backend/game_ledger/: __init__.py  access_manager.py  app.py  config.py  context.py  email.py  token_controller.py  user_comms.py
backend/game_ledger/api/: __init__.py  data.py  user.py
backend/game_ledger/resources/: data.py  tables.sql  user.py
backend/tests/: test_game_ledger.py
cluster/: k8s.yaml  template.secret.yaml
web/: package-lock.json  package.json
web/components/: api.js  game_list.js  party_list.js  session_list.js
web/pages/: index.js
web/pages/game/[id]/: index.js
web/pages/party/[id]/: index.js
web/pages/user/: index.js
web/pages/user/[id]/: index.js
