[tool.poetry]
name = "game-ledger"
version = "0.1.0"
description = ""
authors = ["teivaz <o.kuznietsov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.9.3"
Flask = "^2.0.2"
python-configuration = "^0.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
